# django_intro

./: db.sqlite3  pyproject.toml
django_intro_project/: settings.py  urls.py
intro/: tests.py  views.py
templates/: about.html  home.html
